# masurca

./: README.md  install.sh
global-1/CA8/: Makefile.am  Makefile.in
global-1/CA8/kmer/libbio/: Makefile.am  kmer.C  kmerhuge.H
global-1/CA8/kmer/libkmer/: Makefile.am  existDB-create-from-fasta.C  existDB-create-from-meryl.C  existDB-create-from-sequence.C  existDB-state.C  existDB.C  merTable.H  positionDB-access.C  positionDB-dump.C  positionDB-file.C  positionDB-mismatch.C  positionDB-sort.C  positionDB.C  positionDB.H
global-1/CA8/kmer/libmeryl/: Makefile.am  libmeryl.C
global-1/CA8/kmer/libseq/: Makefile.am  fastaFile.C  fastaStdin.C  fastqFile.C  fastqStdin.C  merStream.C  merStream.H  seqCache.C  seqStore.C  seqStream.C
global-1/CA8/kmer/libutil/: Makefile.am  bitPackedArray.C  bitPackedArray.H  bitPackedFile.C  bitPackedFile.H  bitPacking.h  file.c  generalizedUnaryEncoding.h  logMsg.H  readBuffer.C  recordFile.C  sweatShop.C  util.c  util.h
global-1/CA8/kmer/meryl/: Makefile.am  args.C  binaryOp.C  build.C  dump.C  estimate.C  m-heap.H  merge.C  meryl.H
global-1/CA8/src/: AS_global.C  AS_global.H  Makefile.am
global-1/CA8/src/AS_ALN/: AS_ALN_aligners.H  AS_ALN_bruteforcedp.C  AS_ALN_bruteforcedp.H  AS_ALN_dpaligner.C  AS_ALN_qvaligner.C  CA_ALN_local.C  CA_ALN_overlap.C  Makefile.am
global-1/CA8/src/AS_BAT/: AS_BAT_BestOverlapGraph.C  AS_BAT_Datatypes.H  AS_BAT_EvaluateMates.C  AS_BAT_ExtendByMates.C  AS_BAT_FragmentInfo.C  AS_BAT_Logging.C  AS_BAT_MateLocation.C  AS_BAT_MergeSplitJoin.C  AS_BAT_Outputs.C  AS_BAT_OverlapCache.C  AS_BAT_PromoteToSingleton.C  AS_BAT_SplitDiscontinuous.C  AS_BAT_Unitig.H  Makefile.am  bogart.C  bogus.C  bogusness.C  classifyMates-globalData.C  classifyMates-globalData.H  classifyMates.C  classifyMates.H  classifyMatesApply.C  classifyMatesPairwise.C  computeCoverageStat.C  erate-estimate.C  markRepeatUnique.C  memoryMappedFile.H  rewriteCache.C  splitUnitigs.C
global-1/CA8/src/AS_BOG/: AS_BOG_BestOverlapGraph.C  AS_BOG_BestOverlapGraph.H  AS_BOG_Breaking.C  AS_BOG_Datatypes.H  AS_BOG_EvaluateMates.C  AS_BOG_FragmentInfo.C  AS_BOG_IntersectBubble.C  AS_BOG_Joining.C  AS_BOG_MateChecker.C  AS_BOG_MateLocation.C  AS_BOG_Outputs.C  AS_BOG_PlaceFragUsingOverlaps.C  AS_BOG_Unitig_AddFrag.C  BuildUnitigs.C  Makefile.am  analyzeBest.C  fixUnitigs.C
global-1/PacBio/: Makefile.am  Makefile.in
global-1/PacBio/include/: debug.hpp  multiplexer.hpp
global-1/PacBio/lib/: global_timer.cc
global-1/PacBio/src_jf_aligner/: bounded_counter.hpp  coarse_aligner.cc  coarse_aligner.hpp  coords_parsing.cc  coords_parsing.hpp  create_mega_reads.cc  create_mega_reads_cmdline.hpp  fine_aligner.cc  fine_aligner.hpp  frag_info.hpp  jf_aligner.cc  jf_aligner.hpp  jf_aligner_cmdline.hpp  least_square_2d.hpp  lf_forward_list.hpp  lf_forward_size_list.hpp  longest_path_overlap_graph2.cc  longest_path_overlap_graph2_cmdline.hpp  merge_coords.cc  merge_coords_cmdline.hpp  misc.cc  misc.hpp  output_file.hpp  overlap_graph.cc  overlap_graph.hpp  pb_aligner.cc  pb_aligner.hpp  super_read_name.cc  super_read_name.hpp  superread_parser.cc  superread_parser.hpp  union_find.cc  union_find.hpp
global-1/PacBio/src_lis/: lis.hpp  lis_align.hpp
global-1/PacBio/src_mega_reads/: add_pb_seq.pl  correct_with_k_unitigs.sh  correct_with_k_unitigs_fast.pl  create_merged_mega-reads.pl  deduplicate_contigs.sh  deduplicate_unitigs.sh  determineUnjoinablePacbioSubmegas.perl  extract_merges_mega-reads.pl  extract_unique_mega-reads.pl  filter_delta_file_for_qrys.pl  findGapsInCoverageOfPacbios.cc  findGapsInCoverageOfPacbios_cmdline.hpp  find_contained_reads.pl  fragScaff.pl  fragScaff.sh  get_super_read_sizes.cc  get_super_read_sizes.pl  get_super_read_sizes_cmdline.hpp  join_mega_reads_trim.onepass.nomatch.pl  join_mega_reads_trim.onepass.pl  make_mate_frg.pl  make_mr_frg.pl  mega_reads_assemble_cluster.sh  mega_reads_assemble_cluster2.sh  mega_reads_assemble_polish.sh  merge_mega-reads.pl  parallel_delta-filter.sh  process_scaffold_gaps.pl  reconciliate_mega_reads.maximal.nucmer.pl  recover_scaffolds.pl  refine.sh  refine_alignments.pl  splitScaffoldsAtNs.pl  split_long_unitigs.pl  split_matches_file.pl  split_reads_to_join.pl  translate_reduced_reads.pl  trim_by_kunitigs.pl  trim_mega_reads.pl
global-1/PacBio/src_psa/: 48bit_index.hpp  48bit_iterator.hpp  barrier.hpp  compact_dna.hpp  compact_index.hpp  compact_iterator.hpp  const_iterator_traits.hpp  global_timer.hpp  mer_sa.hpp  mer_sa_imp.hpp  parallel_iterator_traits.hpp  prefetch_iterator_traits.hpp  psa.hpp  said_traits.hpp  slice.hpp
global-1/PacBio/src_reconcile/: break_contigs.pl  chromosome_scaffolder.sh  close_scaffold_gaps.sh  compute_contig_positions.pl  compute_coverage.pl  create_merged_sequences.pl  evaluate_splits.pl  extract_merges.pl  fill_unaligned_gaps.pl  find_repeats.pl  insert_repeats.pl  introduce_errors_fasta_file.pl  make_rejoin_links.pl  merge_contigs.pl  merge_matches_and_tile_coords_file.pl  merge_matches_and_tile_coords_file_new.pl  merge_sequences_simple.pl  output_reconciled_scaffolds.pl  polca.sh  polish_with_illumina_assembly.sh  reconcile_consensus.pl  reconcile_matches.pl  samba.sh  sizesToScaff.pl  splitScaffoldsAtNs.sh
global-1/PacBio/src_ref/: build_human_reference.sh  final_polish.sh  join_mega_reads_trim.onepass.ref.pl  mega_reads_assemble_ref.sh  recompute_astat_superreads_CA8.sh
global-1/PacBio/src_trio/: classify_reads.pl  resolve_trio.sh
global-1/PacBio/tests/: Makefile.am  misc.cc  misc.hpp  test_align_coordinates.cc  test_compute_coords_info.cc  test_coords_parsing.cc  test_kmers_info.cc  test_pb_aligner.cc  test_super_read_name.cc  test_superread_parser.cc  test_tiling.cc  test_union_find.cc
global-1/prepare/: Makefile.am  Makefile.in  attachPEinfo.c  bundle.c  check.c  fib.c  lib.c  loadGraph.c  localAsm.c  main.c  map.c  newhash.c  orderContig.c  potential.c  prepare.c  prlHashCtg.c  prlRead2Ctg.c  prlReadFillGap.c  read2scaf.c  readseq1by1.c  scaffold.c  searchPath.c
global-1/prepare/inc/: def.h  fibpriv.h
global-1/samtools/: Makefile.am  Makefile.in
(+372 files in other folders)
