noinst_LIBRARIES += lib/libbio.a
lib_libbio_a_SOURCES = %D%/alphabet.c %D%/alphabet.h		\
%D%/alphabet-acgtspace.c %D%/alphabet-colorspace.c %D%/bio++.H	\
%D%/bio.h %D%/halign.c %D%/kmer.C %D%/kmer.H %D%/kmerhuge.H	\
%D%/kmeriface.H %D%/kmertiny.H %D%/merCovering.H %D%/merList.H	\
%D%/mers.h %D%/reversecomplement.c
