noinst_LIBRARIES += lib/libkmer.a
lib_libkmer_a_SOURCES = %D%/existDB-create-from-fasta.C			\
%D%/existDB-create-from-meryl.C %D%/existDB-create-from-sequence.C	\
%D%/existDB-state.C %D%/existDB.C %D%/existDB.H %D%/merTable.H		\
%D%/positionDB-access.C %D%/positionDB-dump.C %D%/positionDB-file.C	\
%D%/positionDB-mismatch.C %D%/positionDB-sort.C %D%/positionDB.C	\
%D%/positionDB.H

# TODO: should we also compile the binaries?
