noinst_LIBRARIES += lib/libseq.a
lib_libseq_a_SOURCES = %D%/seqFile.H %D%/fastaFile.H %D%/fastaFile.C	\
%D%/fastaStdin.H %D%/fastaStdin.C %D%/fastqFile.H %D%/fastqFile.C	\
%D%/fastqStdin.H %D%/fastqStdin.C %D%/seqStore.H %D%/seqStore.C		\
%D%/sffFile.H %D%/sffFile.C %D%/seqFactory.H %D%/seqFactory.C		\
%D%/seqCache.H %D%/seqCache.C %D%/seqStream.H %D%/seqStream.C		\
%D%/merStream.H %D%/merStream.C
