noinst_LIBRARIES += lib/libutil.a
lib_libutil_a_SOURCES = %D%/bigQueue.C %D%/bigQueue.H			\
%D%/bitOperations.h %D%/bitPackedArray.C %D%/bitPackedArray.H		\
%D%/bitPackedFile.C %D%/bitPackedFile.H %D%/bitPacking.h		\
%D%/eliasDeltaEncoding.h %D%/eliasGammaEncoding.h %D%/endianess.H	\
%D%/fibonacciEncoding.h %D%/fibonacciNumbers.C %D%/file.c		\
%D%/generalizedUnaryEncoding.h %D%/intervalList.H %D%/logMsg.H		\
%D%/md5.c %D%/palloc.c %D%/qsort_mt.c %D%/readBuffer.C			\
%D%/readBuffer.H %D%/recordFile.C %D%/recordFile.H %D%/speedCounter.C	\
%D%/speedCounter.H %D%/splitToWords.H %D%/sweatShop.C %D%/sweatShop.H	\
%D%/uint32List.H %D%/unaryEncoding.h %D%/util++.H %D%/util.c		\
%D%/util.h %D%/kazlib/dict.h %D%/kazlib/except.h %D%/kazlib/hash.h	\
%D%/kazlib/list.h %D%/kazlib/sfx.h
