bin_PROGRAMS += bin/gatekeeper bin/gatekeeperbench bin/sffToCA	\
                bin/fastqToCA bin/fastqSample bin/fastqSimulate	\
                bin/fastqSimulate-sort bin/fastqAnalyze		\
                bin/gkpStoreDumpFASTQ bin/gkpStoreCreate	\
                bin/upgrade-v8-to-v9 bin/upgrade-v9-to-v10

bin_gatekeeper_SOURCES = %D%/AS_GKP_main.C %D%/AS_GKP_buildPartition.C		\
                         %D%/AS_GKP_checkLibrary.C %D%/AS_GKP_checkFrag.C	\
                         %D%/AS_GKP_checkLink.C %D%/AS_GKP_checkPlace.C		\
                         %D%/AS_GKP_dump.C %D%/AS_GKP_edit.C %D%/AS_GKP_errors.C	\
                         %D%/AS_GKP_illumina.C
bin_gatekeeperbench_SOURCES = %D%/AS_GKP_bench.C
bin_sffToCA_SOURCES = %D%/sffToCA.C
bin_fastqToCA_SOURCES = %D%/fastqToCA.C
bin_fastqSample_SOURCES = %D%/fastqSample.C
bin_fastqSimulate_SOURCES = %D%/fastqSimulate.C
bin_fastqSimulate_sort_SOURCES = %D%/fastqSimulate-sort.C
bin_fastqAnalyze_SOURCES = %D%/fastqAnalyze.C
bin_gkpStoreDumpFASTQ_SOURCES = %D%/gkpStoreDumpFASTQ.C
bin_gkpStoreCreate_SOURCES = %D%/gkpStoreCreate.C
bin_upgrade_v8_to_v9_SOURCES = %D%/upgrade-v8-to-v9.C
bin_upgrade_v9_to_v10_SOURCES = %D%/upgrade-v9-to-v10.C

noinst_HEADERS += %D%/AS_GKP_include.H
