noinst_LIBRARIES += lib/libAS_LIN.a
lib_libAS_LIN_a_SOURCES = %D%/dgbtrf.c %D%/dgbtf2.c %D%/dgbtrs.c	\
                          %D%/iparmq.c %D%/ieeeck.c %D%/dlaswp.c	\
                          %D%/disnan.c %D%/dlaisnan.c %D%/dcopy.c	\
                          %D%/dswap.c %D%/dger.c %D%/dpbtrf.c		\
                          %D%/dpbtrs.c %D%/daxpy.c %D%/dgemm.c		\
                          %D%/dgemv.c %D%/dlamch.c %D%/dpbtf2.c	\
                          %D%/dpotf2.c %D%/dptrfs.c %D%/dpttrs.c	\
                          %D%/dsyr.c %D%/dsyrk.c %D%/dtbsv.c		\
                          %D%/dtrsm.c %D%/idamax.c %D%/ilaenv.c		\
                          %D%/lsame.c %D%/xerbla.c %D%/s_copy.c	\
                          %D%/s_cmp.c %D%/ddot.c %D%/dscal.c

libCA_a_SOURCES += $(lib_libAS_LIN_a_SOURCES)

noinst_HEADERS += %D%/f2c.h
