bin_PROGRAMS += bin/overlapInCore

bin_overlapInCore_SOURCES = %D%/overlapInCore-Build_Hash_Index.C \
                            %D%/overlapInCore-Extend_Alignment.C \
                            %D%/overlapInCore-Find_Overlaps.C \
                            %D%/overlapInCore-Output.C \
                            %D%/overlapInCore-Process_Overlaps.C \
                            %D%/overlapInCore-Process_String_Overlaps.C \
                            %D%/overlapInCore-Read_Next_Frag.C \
                            %D%/overlapInCore.C

noinst_HEADERS += %D%/overlapInCore.H
