noinst_LIBRARIES += lib/libAS_REZ.a
lib_libAS_REZ_a_SOURCES = %D%/ConsistencyChecksREZ.C %D%/GapFillREZ.C	\
                          %D%/GapWalkerREZ.C %D%/StatisticsREZ.C	\
                          %D%/UpdateREZ.C %D%/UtilsREZ.C		\
                          %D%/MicroHetREZ.C

libCA_a_SOURCES += $(lib_libAS_REZ_a_SOURCES)

noinst_HEADERS += %D%/GapWalkerREZ.H %D%/RepeatRez.H		\
%D%/DataTypesREZ.H %D%/StatisticsREZ.H %D%/MicroHetREZ.H	\
%D%/ConsistencyChecksREZ.H %D%/PartitionsREZ.H %D%/SUBDELREZ.H	\
%D%/UpdateREZ.H %D%/UtilsREZ.H %D%/CommonREZ.H
