dist_bin_SCRIPTS += %D%/runCA %D%/runCA-dedupe				\
%D%/runCA-overlapStoreBuild %D%/asmQC/mergeqc.pl %D%/asmQC/caqc.pl	\
%D%/asmQC/caqc_help.ini %D%/asmQC/ca2ace.pl %D%/asmQC/asmToAGP.pl	\
%D%/replaceUIDwithName-fastq %D%/replaceUIDwithName-posmap
tigrbindir = $(bindir)/TIGR
dist_tigrbin_SCRIPTS = %D%/asmQC/TIGR/AsmLib.pm	\
%D%/asmQC/TIGR/Foundation.pm

bin_PROGRAMS += bin/fragmentDepth bin/markUniqueUnique
bin_fragmentDepth_SOURCES = %D%/fragmentDepth.C
bin_markUniqueUnique_SOURCES = %D%/markUniqueUnique.C
