bin_PROGRAMS += bin/terminator bin/asmOutputFasta			\
                bin/asmOutputStatistics bin/fragsInVars			\
                bin/buildPosMap bin/analyzePosMap bin/demotePosMap

bin_terminator_SOURCES = %D%/terminator.C
bin_asmOutputFasta_SOURCES = %D%/asmOutputFasta.C
bin_asmOutputStatistics_SOURCES = %D%/asmOutputStatistics.C
bin_fragsInVars_SOURCES = %D%/fragsInVars.C
bin_buildPosMap_SOURCES = %D%/buildPosMap.C
bin_analyzePosMap_SOURCES = %D%/analyzePosMap.C			\
%D%/analyzePosMap-libraryFate.C %D%/analyzePosMap-load.C	\
%D%/analyzePosMap-gapFillProbability.C
bin_demotePosMap_SOURCES = %D%/demotePosMap.C

noinst_HEADERS += %D%/analyzePosMap.H
